Draw Bounding Boxes

--- a/CompRobo LLM Visual App.ipynb
+++ b/CompRobo LLM Visual App.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.tools import BaseTool\n",
     "from transformers import BlipProcessor, BlipForConditionalGeneration, DetrImageProcessor, DetrForObjectDetection\n",
-    "from PIL import Image\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
     "import torch\n",
     "#\n",
     "import os\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +120,47 @@
     "    return caption\n",
     "\n",
     "\n",
+    "# def detect_objects(image_path):\n",
+    "#     \"\"\"\n",
+    "#     Detects objects in the provided image.\n",
+    "\n",
+    "#     Args:\n",
+    "#         image_path (str): The path to the image file.\n",
+    "\n",
+    "#     Returns:\n",
+    "#         str: A string with all the detected objects. Each object as '[x1, x2, y1, y2, class_name, confindence_score]'.\n",
+    "#     \"\"\"\n",
+    "#     image = Image.open(image_path).convert('RGB')\n",
+    "\n",
+    "#     processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
+    "#     model = DetrForObjectDetection.from_pretrained(\"facebook/detr-resnet-50\")\n",
+    "\n",
+    "#     inputs = processor(images=image, return_tensors=\"pt\")\n",
+    "#     outputs = model(**inputs)\n",
+    "\n",
+    "#     # convert outputs (bounding boxes and class logits) to COCO API\n",
+    "#     # let's only keep detections with score > 0.9\n",
+    "#     target_sizes = torch.tensor([image.size[::-1]])\n",
+    "#     results = processor.post_process_object_detection(outputs, target_sizes=target_sizes, threshold=0.9)[0]\n",
+    "\n",
+    "#     detections = \"\"\n",
+    "#     for score, label, box in zip(results[\"scores\"], results[\"labels\"], results[\"boxes\"]):\n",
+    "#         detections += '[{}, {}, {}, {}]'.format(int(box[0]), int(box[1]), int(box[2]), int(box[3]))\n",
+    "#         detections += ' {}'.format(model.config.id2label[int(label)])\n",
+    "#         detections += ' {}\\n'.format(float(score))\n",
+    "\n",
+    "#     return detections\n",
+    "\n",
     "def detect_objects(image_path):\n",
-    "    \"\"\"\n",
-    "    Detects objects in the provided image.\n",
+    "    \"\"\"Detects objects in the provided image and draws bounding boxes around them.\n",
     "\n",
     "    Args:\n",
     "        image_path (str): The path to the image file.\n",
     "\n",
     "    Returns:\n",
-    "        str: A string with all the detected objects. Each object as '[x1, x2, y1, y2, class_name, confindence_score]'.\n",
+    "        PIL.Image: The image object with bounding boxes drawn on it.\n",
     "    \"\"\"\n",
+    "    # Open and convert the image\n",
     "    image = Image.open(image_path).convert('RGB')\n",
     "\n",
     "    processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
@@ -149,12 +180,31 @@
     "        detections += ' {}'.format(model.config.id2label[int(label)])\n",
     "        detections += ' {}\\n'.format(float(score))\n",
     "\n",
-    "    return detections"
+    "    # Draw bounding boxes and labels on the image\n",
+    "    draw = ImageDraw.Draw(image)\n",
+    "    for score, label, box in zip(results[\"scores\"], results[\"labels\"], results[\"boxes\"]):\n",
+    "        box = [int(b) for b in box]\n",
+    "        class_name = model.config.id2label[int(label)]\n",
+    "        confidence = float(score)\n",
+    "\n",
+    "        # Draw rectangle\n",
+    "        draw.rectangle([(box[0], box[1]), (box[2], box[3])], outline=\"red\", width=3)\n",
+    "\n",
+    "        # Optionally, draw text (class name and confidence)\n",
+    "        text = f\"{class_name}: {confidence:.2f}\"\n",
+    "        draw.text((box[0] + 10, box[1] + 10), text, fill=\"red\")\n",
+    "\n",
+    "    # To display the image directly in Jupyter Notebook:\n",
+    "    image_with_boxes = detect_objects(\"path_to_your_image.jpg\")\n",
+    "    image_with_boxes.show()\n",
+    "    \n",
+    "    # Return or display the image\n",
+    "    return image, detections\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,23 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-10-27 14:42:51--  https://www.smartcitiesworld.net/AcuCustom/Sitename/DAM/019/Parsons_PR.jpg\n",
-      "Resolving www.smartcitiesworld.net (www.smartcitiesworld.net)... 108.129.13.134, 54.76.134.71\n",
-      "Connecting to www.smartcitiesworld.net (www.smartcitiesworld.net)|108.129.13.134|:443... connected.\n",
+      "--2023-10-31 18:19:02--  https://www.smartcitiesworld.net/AcuCustom/Sitename/DAM/019/Parsons_PR.jpg\n",
+      "Resolving www.smartcitiesworld.net (www.smartcitiesworld.net)... 54.76.134.71, 108.129.13.134\n",
+      "Connecting to www.smartcitiesworld.net (www.smartcitiesworld.net)|54.76.134.71|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 299237 (292K) [image/jpeg]\n",
       "Saving to: ‘Parsons_PR.jpg’\n",
       "\n",
-      "Parsons_PR.jpg      100%[===================>] 292.22K  1.07MB/s    in 0.3s    \n",
+      "Parsons_PR.jpg      100%[===================>] 292.22K  1.18MB/s    in 0.2s    \n",
       "\n",
-      "2023-10-27 14:42:52 (1.07 MB/s) - ‘Parsons_PR.jpg’ saved [299237/299237]\n",
+      "2023-10-31 18:19:03 (1.18 MB/s) - ‘Parsons_PR.jpg’ saved [299237/299237]\n",
       "\n"
      ]
     }
@@ -233,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -260,14 +310,14 @@
    ],
    "source": [
     "image_path = \"/home/sohum/CompRobo-VisionLLM/Parsons_PR.jpg\"\n",
-    "user_question = \"generate a caption for this iamge?\"\n",
+    "user_question = \"generate a caption for this image?\"\n",
     "response = agent.run(f'{user_question}, this is the image path: {image_path}')\n",
     "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked']\n",
+      "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked']\n",
       "- This IS expected if you are initializing DetrForObjectDetection from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DetrForObjectDetection from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -334,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked']\n",
+      "Some weights of the model checkpoint at facebook/detr-resnet-50 were not used when initializing DetrForObjectDetection: ['model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer1.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked']\n",
       "- This IS expected if you are initializing DetrForObjectDetection from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DetrForObjectDetection from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -384,32 +434,29 @@
       "\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m{\n",
       "    \"action\": \"Final Answer\",\n",
-      "    \"action_input\": \"The bounding boxes of all detected objects in the image are as follows:\\n\\n- Car: [518, 40, 582, 110], [188, 381, 311, 469], [828, 233, 949, 329], [635, 71, 713, 135], [0, 433, 100, 603], [151, 747, 339, 799], [389, 267, 493, 367], [192, 478, 341, 633], [802, 666, 1028, 798], [0, 639, 84, 799], [1057, 608, 1199, 766], [751, 524, 909, 675]\\n- Person: [1068, 223, 1104, 342], [988, 218, 1031, 347]\\n- Bicycle: [1076, 263, 1106, 347]\\n- Traffic light: [578, 117, 828, 550]\"\n",
+      "    \"action_input\": \"The bounding boxes of the detected objects in the image are as follows:\\n\\n- Car: [518, 40, 582, 110], [188, 381, 311, 469], [828, 233, 949, 329], [635, 71, 713, 135], [0, 433, 100, 603], [151, 747, 339, 799], [389, 267, 493, 367], [192, 478, 341, 633], [802, 666, 1028, 798], [0, 639, 84, 799], [1057, 608, 1199, 766], [751, 524, 909, 675]\\n- Person: [1068, 223, 1104, 342], [988, 218, 1031, 347]\\n- Bicycle: [1076, 263, 1106, 347]\\n- Traffic light: [578, 117, 828, 550]\\n\\nPlease find the image with the bounding boxes drawn on it below:\\n\\n![Image with Bounding Boxes](/home/sohum/CompRobo-VisionLLM/Parsons_PR.jpg)\"\n",
       "}\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "The bounding boxes of all detected objects in the image are as follows:\n",
+      "The bounding boxes of the detected objects in the image are as follows:\n",
       "\n",
       "- Car: [518, 40, 582, 110], [188, 381, 311, 469], [828, 233, 949, 329], [635, 71, 713, 135], [0, 433, 100, 603], [151, 747, 339, 799], [389, 267, 493, 367], [192, 478, 341, 633], [802, 666, 1028, 798], [0, 639, 84, 799], [1057, 608, 1199, 766], [751, 524, 909, 675]\n",
       "- Person: [1068, 223, 1104, 342], [988, 218, 1031, 347]\n",
       "- Bicycle: [1076, 263, 1106, 347]\n",
-      "- Traffic light: [578, 117, 828, 550]\n"
+      "- Traffic light: [578, 117, 828, 550]\n",
+      "\n",
+      "Please find the image with the bounding boxes drawn on it below:\n",
+      "\n",
+      "![Image with Bounding Boxes](/home/sohum/CompRobo-VisionLLM/Parsons_PR.jpg)\n"
      ]
     }
    ],
    "source": [
     "image_path = \"/home/sohum/CompRobo-VisionLLM/Parsons_PR.jpg\"\n",
-    "user_question = \"Please tell me the bounding boxes of all detected objects in the image.\"\n",
+    "user_question = \"Please tell me the bounding boxes of all detected objects in the image. Then show the image with the bounding boxes drawn on it.\"\n",
     "response = agent.run(f'{user_question}, this is the image path: {image_path}')\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
