--- a/featureExtraction/CNNFeatureExtract.ipynb
+++ b/featureExtraction/CNNFeatureExtract.ipynb
@@ -53,23 +53,8 @@
       "/Users/zaynpatel/opt/miniconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/Users/zaynpatel/opt/miniconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /Users/zaynpatel/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n"
+      "  warnings.warn(msg)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b3b8dd223c74f83bed5736de007e2e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/44.7M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -86,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "ee9c04a1",
    "metadata": {},
    "outputs": [],
@@ -97,28 +82,34 @@
     "from torch.utils.data import Dataset\n",
     "\n",
     "class UnderstandImages(Dataset):\n",
-    "    # Set up the directory where images are stored and do any transformations here, as necessary\n",
     "    def __init__(self, img_dir, transform=None):\n",
-    "        self.img_dir = img_dir\n",
-    "        self.transform = transform # understand\n",
-    "        self.img_names = os.listdir(img_dir)\n",
+    "        self.img_dir = img_dir # this will be the dictionary passed in the custom class UnderstandImages {'className' : 'file/directory/for/class'}\n",
+    "        self.transform = transform # transform is the same as the block below - we want to begin converting it into tensor-like format\n",
+    "        self.img_names = [] # initializing this as an empty list because I want to iterate over each class directory and list their files\n",
+    "\n",
+    "        for classname, directoryname in self.img_dir.items():\n",
+    "            image_names = os.listdir(directoryname) # list the items in the directory - does this list the items on every loop?\n",
+    "            for img_name in image_names:\n",
+    "                img_path = os.path.join(directoryname, img_name) # join the directory with the image names\n",
+    "                self.img_names.append((img_path, classname))\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return len(self.img_names)\n",
+    "        return len(self.img_names) \n",
     "\n",
     "    # override this class so I can get image and filename\n",
     "    def __getitem__(self, idx):\n",
-    "        img_path = os.path.join(self.img_dir, self.img_names[idx])\n",
+    "        #img_path = os.path.join(self.img_dir, self.img_names[idx]) # is this still right?\n",
+    "        img_path, classname = self.img_names[idx] # we need to tuple unpack because we get two items in self.img_names based on our append\n",
     "        image = Image.open(img_path) # convert raw images into tensors\n",
-    "        if self.transform: # why\n",
+    "        if self.transform: # apply the transform to each image \n",
     "            image = self.transform(image)\n",
-    "        \n",
-    "        return image, self.img_names[idx]"
+    "    \n",
+    "        return image, classname # return the image and classname because we want to use these for the labeling later on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "e46f2300",
    "metadata": {},
    "outputs": [],
@@ -127,15 +118,15 @@
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224),\n",
+    "    transforms.CenterCrop(224), # crop to the center since we assume most of the important features are in the center\n",
     "    transforms.ToTensor(), # converts a PIL image, like the one defined in the above code block to a PyTorch tensor or np.ndarray\n",
-    "    transforms.Normalize(mean = [0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-    "]) "
+    "    transforms.Normalize(mean = [0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]) # normalize based on the values of the resnet when it was originally trained\n",
+    "])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "bbd688f4",
    "metadata": {},
    "outputs": [],
@@ -146,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "165d541f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "import numpy as np # need a way to persist data so use np array to save items to .npy files too\n",
-    "dataset = UnderstandImages(img_dir = '/Users/zaynpatel/vision/visionLLM/CompRobo-VisionLLM/featureExtraction/train', transform=transform)\n",
-    "dataloader = DataLoader(dataset, batch_size=9, shuffle=False, num_workers=0)\n",
+    "dataset = UnderstandImages(img_dir = '/Users/zaynpatel/vision/visionLLM/CompRobo-VisionLLM/featureExtraction/train', transform=transform) # use the custom defined class to get filename in the dataloader\n",
+    "dataloader = DataLoader(dataset, batch_size=9, shuffle=False, num_workers=0) # pass in dataset of images, batch_size which is the number of images getting passed to the model, num_workers is number working in parallel on machine\n",
     "\n",
     "resnet18.eval()\n",
     "\n",
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "5d78102b",
    "metadata": {},
    "outputs": [
